--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           </div>
         </div>
       </section>
+
+      <div class="overlay"></div>
+      <div class="modal flex">
+        <p class="modal__text"></p>
+        <div class="modal__btns">
+          <button class="new-game-btn btn">Play Again</button>
+          <button class="exit-btn btn">Exit Game</button>
+        </div>
+      </div>
     </main>
   </body>
 </html>
